# GLiClass

./: pyproject.toml
.github/workflows/: main.yml
gliclass/: model.py
